Edit README.md to teach how to run GUIs