@@ -10,14 +10,16 @@ all you need to do is compile the whole primality2 package at once using "javac 
 if you receive an error go into the primality2 folder and compile RSA first. "javac .\RSA.java" then repeat the previous step
 
 
-once this is finished. you launch the chatserver class "java primality2.ChatServer"
+once this is finished. you launch the chatserver class "java primality2.ChatServerGUI"
 
 
-then on another terminal only launch the chatclient class. you have to be in the same directory "java primality2.ChatClient"
+then on another terminal only launch the chatclient class. you have to be in the same directory "primality2.ChatClientGUI"
 
 then you can communicate on the client side and the server will receive your messages. you can also see the encrypted messages.
 
-
+you'll need to hae a javafx installed which can be done here https://openjfx.io/index.html
+and once installed , use java --module-path "path_location_of javafx\lib" --add-modules javafx.controls,javafx.fxml primality2.ChatClientGUI
+and same with ChatServerGUI
 
 
 
